--- a/ninew/<Test2>.html
+++ b/ninew/<Test2>.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Hello</h1>
     <h1>Hello</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus accusamus similique amet, ipsam dolorum rerum officia. Eos consequuntur magnam vero similique iste quis eum sed, recusandae molestiae maiores? Harum, maiores!</p>
+    <p>labore eiusmod sunt dolore amet sit consequat dolore tempor dolore eu veniam qui cupidatat quis"</p>
 </body>
 </html>
